Fix white space below about section images

--- a/styles.css
+++ b/styles.css
@@ -765,6 +765,7 @@ ul {
 
 .about-images {
     position: relative;
+    padding-bottom: 30px;
 }
 
 .about-img-main {
